<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="UselessParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/logo_codigobarras"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/textview_mainactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/klee_regular"
            android:text="@string/bienvenido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/klee_regular"
            android:gravity="start"
            android:text="@string/iniciar_sesi_n"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_mainactivity" />

        <TextView
            android:id="@+id/textview_largo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            style="@style/Base.CardView"
            android:fontFamily="@font/klee_semibold"
            android:text="@string/al_momento_de_iniciar_sesio_n_tendras_acceso_a_todas_nuestras_vistas_disponibles"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearlayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_largo">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:background="@null"
                android:drawableStart="@drawable/username_image"
                android:drawablePadding="20dp"
                android:fontFamily="@font/klee_regular"
                android:hint="@string/correo_electr_nico"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="emailAddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_email">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:background="@null"
                android:drawableStart="@drawable/lock_image"
                android:drawablePadding="20dp"
                android:fontFamily="@font/klee_regular"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:autofillHints="password" />

        </LinearLayout>

     <!--   <TextView
            android:id="@+id/contraseña_olvidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/klee_semibold"
            android:gravity="end"
            android:text="@string/has_olvidado_tu_contrase_a"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/linearlayout_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_password" /> -->

        <LinearLayout
            android:id="@+id/linearlayout_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_password">

            <Button
                android:id="@+id/registrar_usuario"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:fontFamily="@font/klee_semibold"
                android:paddingStart="30dp"
                android:text="@string/no_tienes_cuenta_nregistrate"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/iniciar_sesion"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_24_white"
                android:fontFamily="@font/klee_regular"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/posees_una_cuenta_ninicia_sesi_n"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


