<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".Vista.RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageButton
                    android:id="@+id/back_to_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_baseline_arrow_back_24_black"
                    android:contentDescription="@string/todo"
                    android:foregroundGravity="left"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/imagen_registro"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/klee_regular"
                    android:text="@string/pesta_a_registro"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints="none"
                    android:background="@drawable/edittext_border"
                    android:drawableStart="@drawable/username_image"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/klee_regular"
                    android:hint="@string/nombre"
                    android:inputType="textEmailAddress"
                    android:textSize="17sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints="none"
                    android:background="@drawable/edittext_border"
                    android:drawableStart="@drawable/username_image"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/klee_regular"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="textEmailAddress"
                    android:textSize="17sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints="none"
                    android:background="@drawable/edittext_border"
                    android:drawableStart="@drawable/lock_image"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/klee_regular"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:textSize="17sp"
                    android:textStyle="normal" />


                <Button
                    android:id="@+id/btn_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/btn_logout"
                    android:fontFamily="@font/klee_regular"
                    android:text="@string/registrarse"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    tools:ignore="UselessLeaf">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.050"
                        android:background="@drawable/ic_baseline_error_outline_24"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="0.6"
                        android:fontFamily="@font/muli"
                        android:gravity="center"
                        android:text="@string/usar_tus_credenciales_de_autenticaci_n_facilitar_n_el_acceso_a_nuestras_distintas_plataformas"
                        android:textSize="13sp" />

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>