<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".Vista.ScanItemStateActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:hint="prueba"
                    android:id="@+id/scan_item_state_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_available"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/disponible"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/rb_no_available"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/no_disponible"
                        android:textAlignment="center" />

                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/guardar_estado"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:fontFamily="@font/klee_semibold"
                        android:text="@string/guardar"
                        android:textAlignment="center"
                        android:drawableTop="@drawable/ic_baseline_save_24"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        tools:ignore="RtlSymmetry" />

                    <Button
                        android:id="@+id/cancelar"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:fontFamily="@font/klee_semibold"
                        android:text="@string/cancelar"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:drawableTop="@drawable/ic_baseline_cancel_24"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        tools:ignore="RtlSymmetry" />


                </LinearLayout>


            </LinearLayout>




        </androidx.cardview.widget.CardView>


</ScrollView>