<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".Vista.DelItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/text_view_delete_item"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_to_home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:background="@drawable/ic_baseline_arrow_back_24_black"
                android:contentDescription="@string/todo"
                android:foregroundGravity="left"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/klee_regular"
                android:padding="10dp"
                android:text="@string/borrar_nproducto"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout_codigobarras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_delete_item">

            <ImageButton
                android:id="@+id/btn_escanear"
                android:background="@drawable/ic_baseline_camera_alt_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.88"
                app:boxBackgroundMode="outline">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_scanbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/escanear_c_digo_de_barras"
                    android:fontFamily="@font/muli"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/deleteItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="100dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circlebackgroundyellow"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_delete_24"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/klee_regular"
                    android:text="@string/borrar_nproducto"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>